# SimulatedAnnealing

./: .gitignore  .gitmodules  CMakeLists.txt  ConstantExploration.ipynb  Eploration.ipynb  ExponentialRunner.ipynb  FinalComparison.ipynb  LinearExploration.ipynb  LogarithmicRunner.ipynb  PolynomialRunner.ipynb  README.md  Running.ipynb  Schedules.ipynb  SublinearRunner.ipynb  constantRunner.py  exponentialRunner.py  linearRunner.py  logarithmicRunner.py  polynomialRunner.py  pythonRunner.py  setup.py
ext/: CMakeLists.txt
include/mcaa/: common.h  competition.h  constant.h  contexponential.h  contlinear.h  contlogarithmic.h  contpolynomial.h  helpers.h  mcmc.h  multicompetition.h  multimcmc.h  sampler.h  schedule.h
python/: Competition.ipynb  LinearRunner.ipynb  LogarithmicRunner.ipynb  answer_MALA.mat  competitionRunner.py  exponentialRunner.py  polynomialRunner.py  randomData.mat
report/: report.tex
src/: competition.cpp  helpers.cpp  main.cpp  mcmc.cpp  multicompetition.cpp  multimcmc.cpp  sampler.cpp
